css/style.css
* {
	font-family: 'Lato', sans-serif;
}

@media (min-width: 992px) {

	#header-content {
		width: 100%;
	}

	#body-content {
		max-width: 1075px;
	}
}

@media (max-width: 483px) {

	#body-content {
		padding-top: 165px;
	}

}

@media (min-width: 484px) {

	#body-content {
		padding-top: 125px;
	}

}

body {
	background-color: #F5DEB3;
}

hr {
	border-style: solid;
	border-width: 2px;
	border-color: #7d97ad;
}

h1 {
	font-size: 3em;
	font-weight: 300;
	color: #7d97ad;
}

h2 {
	color: #7d97ad;
	font-size: 2.3em;
	font-weight: 300;
}

h3 {
	font-size: 1.5em;
}

#modal-a,
#modal-b,
#modal-c,
#modal-d,
#modal-e {
	display: block;
}

#header-content {
	width: 100%;
	position: fixed;
	margin-top: 0px;
	z-index: 100;
}

#body-content {
	border: 1px solid black;
	box-sizing: border-box;
	border-radius: 10px;
	box-shadow: 2px 2px;
}

.project {
	background-color: #DCD0C0;
	border: 1px solid black;
	box-sizing: border-box;
	border-radius: 8px;
	box-shadow: 1px 3px;
	}

.contact {
	display: block;
	font-size: 1.3em;
	color: #7d97ad;
}

.head {
	width: 100%;
	background-color: #DCD0C0;
	border: 1px solid black;
	box-sizing: border-box;
	border-radius: 5px;
	box-shadow: 4px 4px;
}

.container {
	background-color: #606060;
	box-sizing: border-box;
	border: 1px;
	border-radius: 10px;
}

.modal-container{
	background-color: #373737;
	border: 1px solid black;
	box-sizing: border-box;
	border-radius: 5px;
	box-shadow: 5px 5px;
}

.modal-project {
	background-color: #DCD0C0;
}

.modal-title {
	color: #7d97ad;
}

.job-title {
	font-size: 1.2em;
}

.thumbnail {
	max-width: 95%;
}

